Add new quiz questions on emotional intelligence

--- a/lesson2/l2quiz.html
+++ b/lesson2/l2quiz.html
@@ -176,54 +176,54 @@ const MAP_PATH = "../lessonmap/lesson-map.html";
 // Quiz Questions (10 selected from 15)
 const quiz = [
   {
-    q: "Emotions and thinking should work ____.",
-    options: ["A) Separately", "B) Together", "C) Opposite", "D) Against each other"],
-    answer: 2,
-  },
-  {
-    q: "The mind gives us ____.",
-    options: ["A) Feelings", "B) Logic", "C) Anger", "D) Fear"],
-    answer: 2,
-  },
-  {
-    q: "The heart acts like a ____.",
-    options: ["A) Machine", "B) Compass", "C) Teacher", "D) Phone"],
-    answer: 2,
-  },
-  {
-    q: "Integrating emotion and reason means ____.",
-    options: ["A) Ignoring feelings", "B) Ignoring logic", "C) Using both feelings and logic together", "D) Fighting with others"],
-    answer: 3,
-  },
-  {
-    q: "When you calm yourself instead of shouting, it shows ____.",
-    options: ["A) Weakness", "B) Emotional intelligence", "C) Fear", "D) Ego"],
-    answer: 2,
-  },
-  {
-    q: "Recognising others’ emotions means noticing their ____.",
-    options: ["A) Marks", "B) Expressions and tone", "C) Clothes", "D) Books"],
-    answer: 2,
-  },
-  {
-    q: "Ego is described as the voice that says:",
-    options: ["A) I want to learn", "B) I am always right", "C) I will help you", "D) Let's try again"],
-    answer: 1,
-  },
-  {
-    q: "Open-mindedness means:",
-    options: ["A) Not listening", "B) Only talking", "C) Being ready to hear new ideas", "D) Being angry"],
-    answer: 2,
-  },
-  {
-    q: "A constructive thinker focuses on:",
-    options: ["A) Blaming others", "B) Finding mistakes", "C) Finding solutions", "D) Giving up"],
-    answer: 2,
-  },
-  {
-    q: "Small actions like helping classmates are called:",
-    options: ["A) Competition", "B) Contribution", "C) Punishment", "D) Complaint"],
-    answer: 1,
+  q: "Emotional intelligence means ____.",
+  options: ["A) Scoring high marks", "B) Understanding feelings", "C) Winning arguments", "D) Ignoring emotions"],
+  answer: 2,
+},
+{
+  q: "Naming your feelings helps you ____.",
+  options: ["A) Lose control", "B) Panic", "C) Calm down", "D) Fight"],
+  answer: 3,
+},
+{
+  q: "Using emotions constructively means ____.",
+  options: ["A) Letting emotions control you", "B) Using emotions positively", "C) Ignoring emotions", "D) Hiding emotions"],
+  answer: 2,
+},
+{
+  q: "Fear, pride and anger can become ____.",
+  options: ["A) Talents", "B) Emotional barriers", "C) Success", "D) Confidence"],
+  answer: 2,
+},
+{
+  q: "The Red Hat thinking technique focuses on ____.",
+  options: ["A) Logic only", "B) Facts only", "C) Expressing emotions honestly", "D) Ignoring feelings"],
+  answer: 3,
+},
+{
+  q: "Anger may signal that something feels ____.",
+  options: ["A) Fair", "B) Funny", "C) Unfair", "D) Easy"],
+  answer: 3,
+},
+{
+  q: "Emotions and thinking should work ____.",
+  options: ["A) Separately", "B) Together", "C) Opposite", "D) Against each other"],
+  answer: 2,
+},
+{
+  q: "Integrating emotion and reason means ____.",
+  options: ["A) Ignoring feelings", "B) Ignoring logic", "C) Using both feelings and logic together", "D) Fighting with others"],
+  answer: 3,
+},
+{
+  q: "Recognising others’ emotions means noticing their ____.",
+  options: ["A) Marks", "B) Expressions and tone", "C) Clothes", "D) Books"],
+  answer: 2,
+},
+{
+  q: "When you calm yourself instead of shouting, it shows ____.",
+  options: ["A) Weakness", "B) Emotional intelligence", "C) Fear", "D) Ego"],
+  answer: 2,
   }
 ];
 
