Update NEXT_PAGE path to relative URL

--- a/lesson1/l1topic1.html
+++ b/lesson1/l1topic1.html
@@ -256,7 +256,7 @@ import { completeTopicInFirebase, getProgressData } from '../progress-manager.js
 const VIDEO_DURATION = 10; // 10 seconds timer
 const TOPIC_ID = "l1topic1";
 const STARS_TO_EARN = 10;
-const NEXT_PAGE = "l1topic2.html";
+const NEXT_PAGE = "./l1topic2.html";
 // ============================================
 
 const nextBtn = document.getElementById("nextBtn");
