--- a/lesson3/l3quiz.html
+++ b/lesson3/l3quiz.html
@@ -176,55 +176,55 @@ const MAP_PATH = "../lessonmap/lesson-map.html";
 // Quiz Questions (10 selected from 15)
 const quiz = [
   {
-    q: "What makes a person truly beautiful according to the lesson?",
-    options: ["A) Face", "B) Clothes", "C) Mind", "D) Money"],
-    answer: 2,
-  },
-  {
-    q: "A beautiful mind shows qualities like:",
-    options: ["A) Anger and pride", "B) Kindness and calmness", "C) Laziness and fear", "D) Loud talking"],
-    answer: 1,
-  },
-  {
-    q: "Thinking is compared to which activity in the lesson?",
-    options: ["A) Singing", "B) Sleeping", "C) Playing a sport", "D) Watching TV"],
-    answer: 2,
-  },
-  {
-    q: "What should we do before reacting when someone annoys us?",
-    options: ["A) Shout", "B) Ignore", "C) Pause and think", "D) Walk away"],
-    answer: 2,
-  },
-  {
-    q: "Beauty in interaction means:",
-    options: ["A) Talking loudly", "B) Showing off", "C) Being kind and listening", "D) Using big words"],
-    answer: 2,
-  },
-  {
-    q: "Conversation becomes an art when we talk to:",
-    options: ["A) Win", "B) Show power", "C) Understand others", "D) Prove others wrong"],
-    answer: 2,
-  },
-  {
-    q: "Ego is described as the voice that says:",
-    options: ["A) I want to learn", "B) I am always right", "C) I will help you", "D) Let's try again"],
-    answer: 1,
-  },
-  {
-    q: "Open-mindedness means:",
-    options: ["A) Not listening", "B) Only talking", "C) Being ready to hear new ideas", "D) Being angry"],
-    answer: 2,
-  },
-  {
-    q: "A constructive thinker focuses on:",
-    options: ["A) Blaming others", "B) Finding mistakes", "C) Finding solutions", "D) Giving up"],
-    answer: 2,
-  },
-  {
-    q: "Small actions like helping classmates are called:",
-    options: ["A) Competition", "B) Contribution", "C) Punishment", "D) Complaint"],
-    answer: 1,
-  }
+  q: "Attitude mainly refers to:",
+  options: ["A) Physical appearance", "B) The way we look at situations", "C) Our academic marks", "D) Our talent"],
+  answer: 2,
+},
+{
+  q: "Attitude influences:",
+  options: ["A) Only our thoughts", "B) Only our actions", "C) Thoughts, feelings, and actions", "D) None of these"],
+  answer: 3,
+},
+{
+  q: "In the story of Sara, Meera, and Tara, what was the key difference?",
+  options: ["A) Their marks", "B) Their communication skills", "C) Their attitudes", "D) Their teacher"],
+  answer: 3,
+},
+{
+  q: "The three components of attitude are:",
+  options: ["A) Mind, Body, Soul", "B) Thoughts, Feelings, Actions", "C) Knowledge, Skill, Practice", "D) Belief, Talent, Luck"],
+  answer: 2,
+},
+{
+  q: "If a person thinks “This is difficult,” feels nervous, and avoids doing it — this shows:",
+  options: ["A) Positive mindset", "B) Growth mindset", "C) Attitude triangle in action", "D) Intelligence"],
+  answer: 3,
+},
+{
+  q: "The Selection function of attitude helps us:",
+  options: ["A) Protect self-esteem", "B) Choose what we prefer", "C) Organize experience", "D) Motivate others"],
+  answer: 2,
+},
+{
+  q: "The Defense function mainly:",
+  options: ["A) Encourages competition", "B) Protects self-esteem", "C) Reduces emotions", "D) Increases fear"],
+  answer: 2,
+},
+{
+  q: "A positive attitude after failing a test would be:",
+  options: ["A) “I quit.”", "B) “I am useless.”", "C) “I will try again.”", "D) “It’s not my fault.”"],
+  answer: 3,
+},
+{
+  q: "Attitudes are mainly formed through:",
+  options: ["A) Luck", "B) Personal experience, social influence, emotional events", "C) Television only", "D) School rules"],
+  answer: 2,
+},
+{
+  q: "An open mindset:",
+  options: ["A) Avoids challenges", "B) Rejects new ideas", "C) Embraces learning and growth", "D) Complains about problems"],
+  answer: 3,
+}
 ];
 
 // Check authentication
