Add new quiz questions on listening skills

--- a/lesson4/l4quiz.html
+++ b/lesson4/l4quiz.html
@@ -176,55 +176,55 @@ const MAP_PATH = "../lessonmap/lesson-map.html";
 // Quiz Questions (10 selected from 15)
 const quiz = [
   {
-    q: "What makes a person truly beautiful according to the lesson?",
-    options: ["A) Face", "B) Clothes", "C) Mind", "D) Money"],
-    answer: 2,
-  },
-  {
-    q: "A beautiful mind shows qualities like:",
-    options: ["A) Anger and pride", "B) Kindness and calmness", "C) Laziness and fear", "D) Loud talking"],
-    answer: 1,
-  },
-  {
-    q: "Thinking is compared to which activity in the lesson?",
-    options: ["A) Singing", "B) Sleeping", "C) Playing a sport", "D) Watching TV"],
-    answer: 2,
-  },
-  {
-    q: "What should we do before reacting when someone annoys us?",
-    options: ["A) Shout", "B) Ignore", "C) Pause and think", "D) Walk away"],
-    answer: 2,
-  },
-  {
-    q: "Beauty in interaction means:",
-    options: ["A) Talking loudly", "B) Showing off", "C) Being kind and listening", "D) Using big words"],
-    answer: 2,
-  },
-  {
-    q: "Conversation becomes an art when we talk to:",
-    options: ["A) Win", "B) Show power", "C) Understand others", "D) Prove others wrong"],
-    answer: 2,
-  },
-  {
-    q: "Ego is described as the voice that says:",
-    options: ["A) I want to learn", "B) I am always right", "C) I will help you", "D) Let's try again"],
-    answer: 1,
-  },
-  {
-    q: "Open-mindedness means:",
-    options: ["A) Not listening", "B) Only talking", "C) Being ready to hear new ideas", "D) Being angry"],
-    answer: 2,
-  },
-  {
-    q: "A constructive thinker focuses on:",
-    options: ["A) Blaming others", "B) Finding mistakes", "C) Finding solutions", "D) Giving up"],
-    answer: 2,
-  },
-  {
-    q: "Small actions like helping classmates are called:",
-    options: ["A) Competition", "B) Contribution", "C) Punishment", "D) Complaint"],
-    answer: 1,
-  }
+  q: "Listening helps us to ____.",
+  options: ["A) Sleep", "B) Understand clearly", "C) Ignore others", "D) Argue more"],
+  answer: 2,
+},
+{
+  q: "Active listening means listening with your ____.",
+  options: ["A) Eyes only", "B) Ears only", "C) Full attention and mind", "D) Friends"],
+  answer: 3,
+},
+{
+  q: "Which of the following shows active listening?",
+  options: ["A) Looking at phone", "B) Interrupting", "C) Making eye contact", "D) Talking continuously"],
+  answer: 3,
+},
+{
+  q: "Listening without judgement means ____.",
+  options: ["A) Laughing at others", "B) Criticizing quickly", "C) Allowing others to finish speaking", "D) Ignoring ideas"],
+  answer: 3,
+},
+{
+  q: "Listening helps avoid ____.",
+  options: ["A) Knowledge", "B) Respect", "C) Mistakes", "D) Friends"],
+  answer: 3,
+},
+{
+  q: "The lowest level of listening is ____.",
+  options: ["A) Empathic listening", "B) Attentive listening", "C) Hearing", "D) Selective listening"],
+  answer: 3,
+},
+{
+  q: "Listening only to what you like is called ____.",
+  options: ["A) Active listening", "B) Selective listening", "C) Empathic listening", "D) Attentive listening"],
+  answer: 2,
+},
+{
+  q: "The highest level of listening is ____.",
+  options: ["A) Hearing", "B) Pretend listening", "C) Empathic listening", "D) Selective listening"],
+  answer: 3,
+},
+{
+  q: "Pretend listening means ____.",
+  options: ["A) Fully concentrating", "B) Listening with feelings", "C) Acting like listening but thinking something else", "D) Asking questions"],
+  answer: 3,
+},
+{
+  q: "Attentive listening requires ____.",
+  options: ["A) Distraction", "B) Focus", "C) Ego", "D) Anger"],
+  answer: 2,
+},
 ];
 
 // Check authentication
