--- a/instru.html
+++ b/instru.html
@@ -307,10 +307,13 @@ function toggleLesson(header) {
   <section class="instructions">
     <h1>Instructions</h1>
     <ul>
-      <li>Students must complete topics in order.</li>
+      <li>Students must register only through the allowed id and create your id password.</li>
+      <li>After you can login only through that id and password.</li>
+      <li>There are totally 5 lessons and you must complete all the lessons to earn your certificate</li>
       <li>Each lesson contains 3 topics.</li>
       <li>A quiz unlocks after completing all topics.</li>
       <li>Only after the quiz can the next lesson be accessed.</li>
+      <li>Students must complete their assignments and upload them as attachment & submit them accordingly.</li>
     </ul>
   </section>
 
