--- a/lesson1/l1topic1.html
+++ b/lesson1/l1topic1.html
@@ -209,7 +209,7 @@ button#nextBtn:disabled {
 
 <header>
   <div class="heado">
-    <h1>Lesson 1 • Topic 1 - Introduction</h1>
+    <h1>Lesson 1 • Topic 1 - Introduction to Beautiful Mind</h1>
     <div class="header-btns">
       <button class="back" onclick="history.back()">← Back</button>
       <button class="map-btn" onclick="window.location.href='../lessonmap/lesson-map.html'">🗺️ Map</button>
@@ -244,7 +244,7 @@ import { completeTopicInFirebase, getProgressData } from '../progress-manager.js
 // ============================================
 // CONFIG - CHANGE FOR EACH PAGE
 // ============================================
-const VIDEO_DURATION = 10; // seconds to watch before unlocking
+const VIDEO_DURATION = 190; // seconds to watch before unlocking
 const TOPIC_ID = "l1topic1";
 const STARS_TO_EARN = 10;
 const NEXT_PAGE = "./l1topic2.html";
