--- a/lesson3/l3topic2.html
+++ b/lesson3/l3topic2.html
@@ -218,7 +218,7 @@ button#nextBtn:disabled {
 
 <header>
   <div class="heado">
-    <h1>Lesson 3 • Topic 2 - Introduction</h1>
+    <h1>Lesson 3 • Topic 2 - Understanding Attitude</h1>
     <div class="header-btns">
       <button class="back" onclick="history.back()">← Back</button>
       <button class="map-btn" onclick="window.location.href='../lessonmap/lesson-map.html'">🗺️ Map</button>
@@ -229,7 +229,7 @@ button#nextBtn:disabled {
 <main>
   <div id="star-bar">⭐ <span id="star-count">0</span></div>
 
-  <h2>Introduction</h2>
+  <h2>Understanding Attitude</h2>
 
   <div class="video-wrapper">
     <iframe
@@ -253,7 +253,7 @@ import { completeTopicInFirebase, getProgressData } from '../progress-manager.js
 // ============================================
 // CONFIG - CHANGE FOR EACH PAGE
 // ============================================
-const VIDEO_DURATION = 10; // 10 seconds timer
+const VIDEO_DURATION = 300; // 10 seconds timer
 const TOPIC_ID = "l3topic2";
 const STARS_TO_EARN = 10;
 const NEXT_PAGE = "l3topic3.html";
