--- a/lesson4/l4topic1.html
+++ b/lesson4/l4topic1.html
@@ -218,7 +218,7 @@ button#nextBtn:disabled {
 
 <header>
   <div class="heado">
-    <h1>Lesson 4 • Topic 1 - Introduction</h1>
+    <h1>Lesson 4 • Topic 1 - Purpose of Listening</h1>
     <div class="header-btns">
       <button class="back" onclick="history.back()">← Back</button>
       <button class="map-btn" onclick="window.location.href='../lessonmap/lesson-map.html'">🗺️ Map</button>
@@ -229,7 +229,7 @@ button#nextBtn:disabled {
 <main>
   <div id="star-bar">⭐ <span id="star-count">0</span></div>
 
-  <h2>Introduction</h2>
+  <h2>Purpose of Listening</h2>
 
   <div class="video-wrapper">
     <iframe
