--- a/lesson4/l4topic2.html
+++ b/lesson4/l4topic2.html
@@ -218,7 +218,7 @@ button#nextBtn:disabled {
 
 <header>
   <div class="heado">
-    <h1>Lesson 4 • Topic 2 - Introduction</h1>
+    <h1>Lesson 4 • Topic 2 - Feelings and Emotions</h1>
     <div class="header-btns">
       <button class="back" onclick="history.back()">← Back</button>
       <button class="map-btn" onclick="window.location.href='../lessonmap/lesson-map.html'">🗺️ Map</button>
@@ -229,11 +229,11 @@ button#nextBtn:disabled {
 <main>
   <div id="star-bar">⭐ <span id="star-count">0</span></div>
 
-  <h2>Introduction</h2>
+  <h2>Feelings and Emotions</h2>
 
   <div class="video-wrapper">
     <iframe
-      src="https://drive.google.com/file/d/15lBQ_Q9s5W2bdYjGzppfTaNL0qcJv4Kt/preview"
+      src="https://drive.google.com/file/d/1lV9tePnz8fVlcW4wmc9DJbVBcAINv3rb/preview"
       allow="autoplay"
       allowfullscreen
     ></iframe>
@@ -253,7 +253,7 @@ import { completeTopicInFirebase, getProgressData } from '../progress-manager.js
 // ============================================
 // CONFIG - CHANGE FOR EACH PAGE
 // ============================================
-const VIDEO_DURATION = 10; // 10 seconds timer
+const VIDEO_DURATION = 480; // 10 seconds timer
 const TOPIC_ID = "l4topic2";
 const STARS_TO_EARN = 10;
 const NEXT_PAGE = "l4topic3.html";
