--- a/lesson5/l5topic3.html
+++ b/lesson5/l5topic3.html
@@ -229,7 +229,7 @@ button#nextBtn:disabled {
 <main>
   <div id="star-bar">⭐ <span id="star-count">0</span></div>
 
-  <h2>Introduction</h2>
+  <h2>Mind Reset</h2>
 
   <div class="video-wrapper">
     <iframe
@@ -253,7 +253,7 @@ import { completeTopicInFirebase, getProgressData } from '../progress-manager.js
 // ============================================
 // CONFIG - CHANGE FOR EACH PAGE
 // ============================================
-const VIDEO_DURATION = 10; // 10 seconds timer
+const VIDEO_DURATION = 300; // 10 seconds timer
 const TOPIC_ID = "l5topic3";
 const STARS_TO_EARN = 10;
 const NEXT_PAGE = "l5quiz.html";
