--- a/lesson5/l5topic2.html
+++ b/lesson5/l5topic2.html
@@ -229,7 +229,7 @@ button#nextBtn:disabled {
 <main>
   <div id="star-bar">⭐ <span id="star-count">0</span></div>
 
-  <h2>Introduction</h2>
+  <h2>Journaling for stress relief</h2>
 
   <div class="video-wrapper">
     <iframe
