--- a/lessonmap/lesson-map.html
+++ b/lessonmap/lesson-map.html
@@ -540,11 +540,11 @@ main {
       </div>
     </div>
 
-    <div class="lesson lesson-5 locked"><div class="lesson-content locked-content"><div class="node">5</div><div class="lesson-label">Master Level</div></div></div>
-    <div class="lesson lesson-4 locked"><div class="lesson-content locked-content"><div class="node">4</div><div class="lesson-label">Advanced Skills</div></div></div>
-    <div class="lesson lesson-3 locked"><div class="lesson-content locked-content"><div class="node">3</div><div class="lesson-label">Level Up</div></div></div>
-    <div class="lesson lesson-2 locked"><div class="lesson-content locked-content"><div class="node">2</div><div class="lesson-label">Building Blocks</div></div></div>
-    <div class="lesson lesson-1"><div class="lesson-content"><div class="node">1</div><div class="lesson-label">Getting Started</div></div></div>
+    <div class="lesson lesson-5 locked"><div class="lesson-content locked-content"><div class="node">5</div><div class="lesson-label">Mind & Emotions</div></div></div>
+    <div class="lesson lesson-4 locked"><div class="lesson-content locked-content"><div class="node">4</div><div class="lesson-label">Listening</div></div></div>
+    <div class="lesson lesson-3 locked"><div class="lesson-content locked-content"><div class="node">3</div><div class="lesson-label">Attitude</div></div></div>
+    <div class="lesson lesson-2 locked"><div class="lesson-content locked-content"><div class="node">2</div><div class="lesson-label">Emotional Intelligence</div></div></div>
+    <div class="lesson lesson-1"><div class="lesson-content"><div class="node">1</div><div class="lesson-label">Understanding Beautiful Mind</div></div></div>
   </div>
 </main>
 
