--- a/lesson5/l5topic3.html
+++ b/lesson5/l5topic3.html
@@ -256,7 +256,7 @@ import { completeTopicInFirebase, getProgressData } from '../progress-manager.js
 const VIDEO_DURATION = 300; // 10 seconds timer
 const TOPIC_ID = "l5topic3";
 const STARS_TO_EARN = 10;
-const NEXT_PAGE = "l5quiz.html";
+const NEXT_PAGE = "l5topic4.html";
 // ============================================
 
 const nextBtn = document.getElementById("nextBtn");
