--- a/lesson5/l5quiz.html
+++ b/lesson5/l5quiz.html
@@ -175,56 +175,56 @@ const MAP_PATH = "../lessonmap/lesson-map.html";
 
 // Quiz Questions (10 selected from 15)
 const quiz = [
-  {
-    q: "What makes a person truly beautiful according to the lesson?",
-    options: ["A) Face", "B) Clothes", "C) Mind", "D) Money"],
-    answer: 2,
-  },
-  {
-    q: "A beautiful mind shows qualities like:",
-    options: ["A) Anger and pride", "B) Kindness and calmness", "C) Laziness and fear", "D) Loud talking"],
-    answer: 1,
-  },
-  {
-    q: "Thinking is compared to which activity in the lesson?",
-    options: ["A) Singing", "B) Sleeping", "C) Playing a sport", "D) Watching TV"],
-    answer: 2,
-  },
-  {
-    q: "What should we do before reacting when someone annoys us?",
-    options: ["A) Shout", "B) Ignore", "C) Pause and think", "D) Walk away"],
-    answer: 2,
-  },
-  {
-    q: "Beauty in interaction means:",
-    options: ["A) Talking loudly", "B) Showing off", "C) Being kind and listening", "D) Using big words"],
-    answer: 2,
-  },
-  {
-    q: "Conversation becomes an art when we talk to:",
-    options: ["A) Win", "B) Show power", "C) Understand others", "D) Prove others wrong"],
-    answer: 2,
-  },
-  {
-    q: "Ego is described as the voice that says:",
-    options: ["A) I want to learn", "B) I am always right", "C) I will help you", "D) Let's try again"],
-    answer: 1,
-  },
-  {
-    q: "Open-mindedness means:",
-    options: ["A) Not listening", "B) Only talking", "C) Being ready to hear new ideas", "D) Being angry"],
-    answer: 2,
-  },
-  {
-    q: "A constructive thinker focuses on:",
-    options: ["A) Blaming others", "B) Finding mistakes", "C) Finding solutions", "D) Giving up"],
-    answer: 2,
-  },
-  {
-    q: "Small actions like helping classmates are called:",
-    options: ["A) Competition", "B) Contribution", "C) Punishment", "D) Complaint"],
-    answer: 1,
-  }
+{
+  q: "A mind reset helps you to ____.",
+  options: ["A) Increase stress", "B) Clear negative thoughts", "C) Avoid responsibilities", "D) Overthink more"],
+  answer: 2,
+},
+{
+  q: "One simple technique for mind reset is ____.",
+  options: ["A) Deep breathing", "B) Shouting loudly", "C) Ignoring problems", "D) Complaining"],
+  answer: 1,
+},
+{
+  q: "Journaling for stress relief mainly helps to ____.",
+  options: ["A) Hide emotions", "B) Express thoughts safely", "C) Impress others", "D) Waste time"],
+  answer: 2,
+},
+{
+  q: "Writing down your worries can help you ____.",
+  options: ["A) Feel more confused", "B) Understand them better", "C) Forget everything instantly", "D) Blame others"],
+  answer: 2,
+},
+{
+  q: "Gratitude journaling focuses on ____.",
+  options: ["A) Problems", "B) Complaints", "C) Positive experiences", "D) Competition"],
+  answer: 3,
+},
+{
+  q: "An Emotion Quest activity mainly helps you to ____.",
+  options: ["A) Identify and understand feelings", "B) Compare marks", "C) Judge others", "D) Avoid emotions"],
+  answer: 1,
+},
+{
+  q: "When doing a mind reset, pausing before reacting shows ____.",
+  options: ["A) Weakness", "B) Emotional control", "C) Fear", "D) Laziness"],
+  answer: 2,
+},
+{
+  q: "Regular journaling can improve ____.",
+  options: ["A) Stress levels only", "B) Memory only", "C) Self-awareness", "D) Sleep only"],
+  answer: 3,
+},
+{
+  q: "Emotion Quest encourages you to ask, “What am I feeling right now?” to build ____.",
+  options: ["A) Anger", "B) Awareness", "C) Ego", "D) Competition"],
+  answer: 2,
+},
+{
+  q: "A quick mind reset during stress can prevent ____.",
+  options: ["A) Calm decisions", "B) Emotional reactions", "C) Positive thinking", "D) Learning"],
+  answer: 2,
+},
 ];
 
 // Check authentication
