--- a/about-contact.html
+++ b/about-contact.html
@@ -251,15 +251,15 @@
             <p>
                The Department of Commerce owes its existence to the former Department of Corporate Secretaryship, affiliated to the University of Madras since 1977. The department offered B.A. Degree programme in Corporate Secretaryship and in 1984 was converted into Department of Commerce affiliating with the Bharathdiasan University, Tiruchirapalli. Since then, the Department offers B. Com degree programme.
 
-The programmes offered by the Department are very much sought after by a very large section of students of both genders, who desire in excelling in Accounting, Audit, Finance, Marketing, Human Resources, E-Commerce, Computational Accounting, and Information Technology used in Finance.
+The programmes offered by the Department are very much sought after by a very large section of students of both genders, who desire in excelling in Accounting, Audit, Finance, Marketing, Human Resources, E-Commerce, Computational Accounting, and Information Technology used in Finance.<br>
 
 The Department of Commerce has a unique place in the college as it manifests camaraderie among all its members sans discrimination of any sort. It exhibits a vibrant atmosphere as all the members of the staff are dedicated, committed, accessible and responsive to the needs of the students. The students enrolled in the department experience the best of academic ambience of the Heber campus and the professional curricular exercise with a human touch. This holistic combination provides ample scope for the students to hone their extra academic skills and develop their personality.
 
-The Department is proud of its students who have always shown excellence in curricular, cocurricular and extracurricular activities like NCC, NSS, Sports and other extension activities.
+The Department is proud of its students who have always shown excellence in curricular, cocurricular and extracurricular activities like NCC, NSS, Sports and other extension activities. <br>
 
 The students of the Department have been securing University ranks consistently in B.Com, B. Com CA, and M.Com. Many students go on to complete CA, CMA, CS and other professional courses.
 
-The students also undertake a major socially responsible project during their stay in the Department and help those in need. This has helped them to be aware of the concerns of the society around them and inculcates in them the habit of giving and helping those in need. Recent projects include providing help to homes for HIV +ve children, destitute and orphans, and sponsoring a three-wheel scooter for an orthopedically challenged student of the college.
+The students also undertake a major socially responsible project during their stay in the Department and help those in need. This has helped them to be aware of the concerns of the society around them and inculcates in them the habit of giving and helping those in need. Recent projects include providing help to homes for HIV +ve children, destitute and orphans, and sponsoring a three-wheel scooter for an orthopedically challenged student of the college.<br>
 
 Our students have been placed through Campus placements in Reputed Corporates like McKinsey, TCS, CTS, DELL, Royal Bank of Scotland, GoldManSachs, I Nautix, Capgemini, Atos and Karvy.
 
@@ -285,7 +285,7 @@ Tiruchirappalli - 620 017,<br> Tamilnadu, India</p>
                   <div class="contact-icon">📞</div>
                   <div class="contact-details">
                      <h3>Phone</h3>
-                     <p><a href="tel:+919876543210">+91 xxxxxxxxxx</a></p>
+                     <p><a href="tel:+916380640654">+91 6380640654</a></p>
                   </div>
                </div>
 
@@ -293,7 +293,8 @@ Tiruchirappalli - 620 017,<br> Tamilnadu, India</p>
                   <div class="contact-icon">✉️</div>
                   <div class="contact-details">
                      <h3>Email</h3>
-                     <p><a href="mailto:contact@beautifulmind.com">contact@beautifulmind.com</a></p>
+                     <p><a href="mailto:kamalakannanpersonal2006@gmail.com">kamalakannanpersonal2006@gmail.com</a></p>
+                      <p><a href="mailto:miraclinjakruthi22@gmail.com">miraclinjakruthi22@gmail.com</a></p>
                   </div>
                </div>
 
@@ -301,7 +302,7 @@ Tiruchirappalli - 620 017,<br> Tamilnadu, India</p>
                   <div class="contact-icon">🕐</div>
                   <div class="contact-details">
                      <h3>Working Hours</h3>
-                     <p>Monday - Friday: 9:00 AM - 6:00 PM<br>Saturday: 10:00 AM - 4:00 PM</p>
+                     <p>Monday - Friday: 9:00 AM - 5:00 PM<br>Saturday: 10:00 AM - 4:00 PM</p>
                   </div>
                </div>
             </div>
@@ -309,7 +310,6 @@ Tiruchirappalli - 620 017,<br> Tamilnadu, India</p>
             <!-- SOCIAL LINKS -->
             <h3>Follow Us</h3>
             <div class="social-links">
-               <a href="#" title="Facebook">f</a>
                <a href="#" title="Instagram">📷</a>
                <a href="#" title="Twitter">𝕏</a>
                <a href="#" title="LinkedIn">in</a>
