--- a/about-contact.html
+++ b/about-contact.html
@@ -229,7 +229,7 @@
          </div>
          <input type="button" value="☰" class="burger" id="burgerBtn">
          <div class="mobile-menu" id="mobileMenu">
-            <a href="index.html">Home</a>
+            <a href="login.html">Home</a>
             <a href="instru.html">Instructions</a>
          </div>
       </nav>
@@ -243,7 +243,7 @@
       </div>
 
       <div class="about-contact-container">
-         <a href="index.html" class="back-button">← Back Home</a>
+         <a href="login.html" class="back-button">← Back Home</a>
 
          <!-- ABOUT SECTION -->
          <section class="about-section">
